--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,16 @@ body {
     text-wrap: balance;
   }
 } */
+
+.animeLeft {
+  opacity: 0;
+  transform: translateX(-20px);
+  animation: animeLeft 0.3s forwards;
+}
+
+@keyframes animeLeft {
+  to {
+    opacity: 1;
+    transform: initial;
+  }
+}
